# hr-automation

./: .gitignore  README.md  company_info_llm.json  pyproject.toml  requirements.txt
Resumes/: Blake Delver.docx  David Walker.docx  Josh Straight.docx  Natasha Smith.docx  Nate Darg.docx  Raj Saw.docx  Sarah Whitman.docx  Tim Jones.docx
app/: all_models.py  database.py  main.py
app/core/: config.py  logger_setup.py
app/gh_integration/: dao.py  endpoints.py  job_board_api.py  models.py  schema.py  send_webhook_request.py  services.py
app/gh_integration/Samples/: gh_app_data.json  gh_app_data_2.json  gh_app_data_3.json
app/greenhouse_applications/: dao.py  greenhouse_api.py  jd_api.py  models.py  schema.py  send_webhook_request.py  services.py  streamlitUI.py  streamlitnew.py  webhook_api.py  webhook_dummy.py
app/greenhouse_applications/Dummy Data/: dummy_data.json  dummy_data_2.json  dummy_data_3.json  dummy_data_4.json
app/greenhouse_applications/mock_data/: mock_job_content.json
app/jd_drafter/: dao.py  endpoints.py  models.py  send_jd_request.py  services.py
hr_bot/: app.py  config.py  requirements.txt
hr_bot/bot/: cv_bot.py
hr_bot/bot/bot_modules/: backup_create_jd.py  create_jd.py  ques_modified.json
hr_bot/dialogs/: dialog_helper.py  main_dialog.py
